# Agent-Context

./: .gitignore  README.md  pyproject.toml
benchmarks/: leaderboard.md  publish_hf.py
benchmarks/hf_dataset/: README.md
benchmarks/results/: 2026-05-30-gold-reference.md
docs/superpowers/specs/: 2026-05-30-agentkube-eval-metric-benchmark-design.md
skills/context-kubernetes/: SKILL.md
skills/context-kubernetes-workspace/iteration-1/: benchmark.json  benchmark.md
skills/context-kubernetes-workspace/iteration-1/eval-0-agent-subset-manifest/: eval_metadata.json
skills/context-kubernetes-workspace/iteration-1/eval-0-agent-subset-manifest/with_skill/: grading.json  timing.json
skills/context-kubernetes-workspace/iteration-1/eval-0-agent-subset-manifest/without_skill/: grading.json  timing.json
skills/context-kubernetes-workspace/iteration-1/eval-1-freshness-policy/: eval_metadata.json
skills/context-kubernetes-workspace/iteration-1/eval-2-approval-isolation/: eval_metadata.json
skills/context-kubernetes/evals/: evals.json
skills/context-kubernetes/references/: abstractions.md  manifest-example.yaml
skills/fine-grained-entity-typing/: SKILL.md
skills/fine-grained-entity-typing/references/: feature-cues.md  type-hierarchy.md
src/contextkube/core/: models.py
src/contextkube/eval/: __init__.py  checks.py  judge.py  loader.py  report.py  rubric.py  runner.py
src/contextkube/permissions/: engine.py
tests/eval/: test_checks.py  test_loader.py  test_rubric.py
(+14 files in other folders)
