[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextkube"
version = "0.0.1"
description = "Context Kubernetes — declarative governance of enterprise knowledge for agentic AI."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
eval = ["requests>=2"]
dev = ["pytest>=8"]

[project.scripts]
contextkube-eval = "contextkube.eval.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contextkube"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
